--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -21,3 +21,11 @@
          url("/static/fonts/Inter-Regular.woff2") format("woff");
     font-weight: 400;
 }
+
+@font-face {
+    font-family: "italic";
+    src: local('Italic'), local('Italic'), local('Italic'),
+         url("/static/fonts/italic.ttf") format("truetype");
+    font-weight: 400;
+    font-style: italic;
+}
