--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -96,7 +96,7 @@ ul li:not(:last-child) {
 /* Картинки */
 .product-image {
     max-width: 100%;
-    height: auto;
+    height: 200;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: block;
