--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -81,7 +81,7 @@ a:hover {
     padding: 50px 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    color: #fff; /* Белый цвет текста */
+    color: #fff; 
     text-align: center;
 }
 
@@ -125,8 +125,6 @@ a:hover {
     background-color: #9cc1f1;
 }
 
-
-/* Новинки блок */
 .new-releases {
     background: #d8e7f5;
     border-left: 5px solid #2023ce;
@@ -137,7 +135,6 @@ a:hover {
     text-align: center;
 }
 
-/* Блок с вопросами */
 .faq {
     background: #f9f9f9;
     border-left: 5px solid #0f97d6;
@@ -175,7 +172,7 @@ footer {
 }
 
 .about-us-content {
-    text-align: center; /* Центруем текст */
+    text-align: center; 
 }
 
 .about-us img {
