--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,11 +1,25 @@
-@import "./global.css";
-@import "./fonts.css";
-@import "./utils.css";
+@import "reset.css";
+@import "components/index.css";
 
-.test {
-    color: yellow !important;
+html {
+  font-family: 'SF Pro Text', sans-serif;
+  font-style: normal;
+  font-weight: 400;
 }
 
-.test {
-    color: red !important;
+body {
+  background: #f2f4f7;
+
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+  height: 100%;
+  padding: 0 108px;
 }
