--- a/src/assets/styles/components/footer.css
+++ b/src/assets/styles/components/footer.css
@@ -3,15 +3,14 @@
     padding: 24px;
     margin-top: auto;
     margin-bottom: 48px;
-
-    box-shadow: 0 2px 24px 0 rgba(0, 0, 0, 0.08), 0 0 2px 0 rgba(0, 0, 0, 0.08);
     background: #101828;
+    box-shadow: 0 2px 24px 0 rgba(0, 0, 0, 0.08), 0 0 2px 0 rgba(0, 0, 0, 0.08);
 }
 
 .footer__content {
-    display: grid;
-    grid-gap: 40px;
-
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
     align-items: center;
 }
 
@@ -19,39 +18,37 @@
     font-family: "Inter Bold", sans-serif;
     font-weight: 700;
     font-size: 36px;
-    
+    text-transform: uppercase;
+    text-align: center;
+    text-decoration: none;
     line-height: 50%;
     letter-spacing: 0em;
     color: #fff;
-    
-    text-decoration: none;
-    text-transform: uppercase;
-    text-align: center;
 }
 
 .footer__contacts {
     display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .footer__contact {
-    display: grid;
+    display: flex;
+    flex-direction: column;
     gap: 8px;
-
     flex: 1;
 }
 
 .footer__contact-title {
     display: flex;
-    gap: 8px;
-
     align-items: center;
+    gap: 8px;
 }
 
-.footer__contact-title p{
+.footer__contact-title p {
     font-family: "SF Pro Text Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
-
     line-height: 18px;
     letter-spacing: -0.15px;
     color: #98a2b3;
@@ -61,20 +58,17 @@
     font-family: "SF Pro Text Semibold", sans-serif;
     font-weight: 600;
     font-size: 17px;
-
     line-height: 22px;
     letter-spacing: -0.41px;
     color: #FFFFFF;
-
     text-decoration: none;
 }
 
 .footer__end {
     display: flex;
-    gap: 12px;
-
     align-items: center;
     justify-content: center;
+    gap: 12px;
 }
 
 .footer__end-text {
