--- a/src/assets/styles/components/fonts.css
+++ b/src/assets/styles/components/fonts.css
@@ -1,146 +1,270 @@
-/* Inter */
 @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Roman.eot");
+    src: local("HelveticaNeueCyr-Roman"), url("/src/assets/fonts/HelveticaNeueCyr-Roman.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Roman.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Roman.ttf") format("truetype");
+    font-weight: 400;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Black.eot");
+    src: local("HelveticaNeueCyr-Black"), url("/src/assets/fonts/HelveticaNeueCyr-Black.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Black.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Black.ttf") format("truetype");
+    font-weight: 800;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-BlackItalic.eot");
+    src: local("HelveticaNeueCyr-BlackItalic"), url("/src/assets/fonts/HelveticaNeueCyr-BlackItalic.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-BlackItalic.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-BlackItalic.ttf") format("truetype");
+    font-weight: 800;
+    font-style: italic;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Bold.eot");
+    src: local("HelveticaNeueCyr-Bold"), url("/src/assets/fonts/HelveticaNeueCyr-Bold.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Bold.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Bold.ttf") format("truetype");
+    font-weight: 600;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-BoldItalic.eot");
+    src: local("HelveticaNeueCyr-BoldItalic"), url("/src/assets/fonts/HelveticaNeueCyr-BoldItalic.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-BoldItalic.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-BoldItalic.ttf") format("truetype");
+    font-weight: 600;
+    font-style: italic;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Heavy.eot");
+    src: local("HelveticaNeueCyr-Heavy"), url("/src/assets/fonts/HelveticaNeueCyr-Heavy.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Heavy.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Heavy.ttf") format("truetype");
+    font-weight: 900;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Italic.eot");
+    src: local("HelveticaNeueCyr-Italic"), url("/src/assets/fonts/HelveticaNeueCyr-Italic.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Italic.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Italic.ttf") format("truetype");
+    font-weight: normal;
+    font-style: italic;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Light.eot");
+    src: local("HelveticaNeueCyr-Light"), url("/src/assets/fonts/HelveticaNeueCyr-Light.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Light.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Light.ttf") format("truetype");
+    font-weight: 300;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-LightItalic.eot");
+    src: local("HelveticaNeueCyr-LightItalic"), url("/src/assets/fonts/HelveticaNeueCyr-LightItalic.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-LightItalic.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-LightItalic.ttf") format("truetype");
+    font-weight: 300;
+    font-style: italic;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Medium.eot");
+    src: local("HelveticaNeueCyr-Medium"), url("/src/assets/fonts/HelveticaNeueCyr-Medium.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Medium.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Medium.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-MediumItalic.eot");
+    src: local("HelveticaNeueCyr-MediumItalic"), url("/src/assets/fonts/HelveticaNeueCyr-MediumItalic.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-MediumItalic.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-MediumItalic.ttf") format("truetype");
+    font-weight: 500;
+    font-style: italic;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-Thin.eot");
+    src: local("HelveticaNeueCyr-Thin"), url("/src/assets/fonts/HelveticaNeueCyr-Thin.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-Thin.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-Thin.ttf") format("truetype");
+    font-weight: 200;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-UltraLight.eot");
+    src: local("HelveticaNeueCyr-UltraLight"), url("/src/assets/fonts/HelveticaNeueCyr-UltraLight.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-UltraLight.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-UltraLight.ttf") format("truetype");
+    font-weight: 100;
+    font-style: normal;
+    font-display: auto;
+  }
+  
+  @font-face {
+    font-family: "HelveticaNeueCyr";
+    src: url("/src/assets/fonts/HelveticaNeueCyr-UltraLightItalic.eot");
+    src: local("HelveticaNeueCyr-UltraLightItalic"), url("/src/assets/fonts/HelveticaNeueCyr-UltraLightItalic.eot?#iefix") format("embedded-opentype"), url("/src/assets/fonts/HelveticaNeueCyr-UltraLightItalic.woff") format("woff"), url("/src/assets/fonts/HelveticaNeueCyr-UltraLightItalic.ttf") format("truetype");
+    font-weight: 100;
+    font-style: italic;
+    font-display: auto;
+  }
+  
+  @font-face {
     font-family: "Inter";
     src: local('Inter Bold'),
          url("/src/assets/fonts/Inter/Inter-Bold.ttf") format("truetype"),
          url("/src/assets/fonts/Inter/Inter-Bold.woff2") format("woff2");
     font-style: normal;
     font-weight: 700;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "Inter";
     src: local('Inter Bold Italic'),
          url("/src/assets/fonts/Inter/Inter-BoldItalic.ttf") format("truetype"),
          url("/src/assets/fonts/Inter/Inter-BoldItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 700;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "Inter";
     src: local('Inter Medium'),
          url("/src/assets/fonts/Inter/Inter-Medium.ttf") format("truetype"),
          url("/src/assets/fonts/Inter/Inter-Medium.woff2") format("woff2");
     font-style: normal;
     font-weight: 500;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "Inter";
     src: local('Inter Medium Italic'),
          url("/src/assets/fonts/Inter/Inter-MediumItalic.ttf") format("truetype"),
          url("/src/assets/fonts/Inter/Inter-MediumItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 500;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "Inter";
     src: local('Inter Regular'),
          url("/src/assets/fonts/Inter/Inter-Regular.ttf") format("truetype"),
          url("/src/assets/fonts/Inter/Inter-Regular.woff2") format("woff2");
     font-style: normal;
     font-weight: 400;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "Inter";
     src: local('Inter Regular Italic'),
          url("/src/assets/fonts/Inter/Inter-RegularItalic.ttf") format("truetype"),
          url("/src/assets/fonts/Inter/Inter-RegularItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 400;
-}
-
- /* SF Pro Display */
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Display";
     src: local('SF Pro Display Semibold'),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-Semibold.ttf") format("truetype"),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-Semibold.woff2") format("woff2");
     font-style: normal;
     font-weight: 600;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Display";
     src: local('SF Pro Display Semibold Italic'),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-SemiboldItalic.ttf") format("truetype"),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-SemiboldItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 600;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Display";
     src: local('SF Pro Display Regular'),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-Regular.ttf") format("truetype"),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-Regular.woff2") format("woff2");
     font-style: normal;
     font-weight: 400;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Display";
     src: local('SF Pro Display Regular Italic'),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-RegularItalic.ttf") format("truetype"),
          url("/src/assets/fonts/SFProDisplay/SF-Pro-Display-RegularItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 400;
-}
-
- /* SF Pro Text */
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Text";
     src: local('SF Pro Text Semibold'),
          url("/src/assets/fonts/SFProText/SFProText-Semibold.ttf") format("truetype"),
          url("/src/assets/fonts/SFProText/SFProText-Semibold.woff2") format("woff2");
     font-style: normal;
     font-weight: 600;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Text";
     src: local('SF Pro Text Semibold Italic'),
          url("/src/assets/fonts/SFProText/SFProText-SemiboldItalic.ttf") format("truetype"),
          url("/src/assets/fonts/SFProText/SFProText-SemiboldItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 600;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Text";
     src: local('SF Pro Text Medium'),
          url("/src/assets/fonts/SFProText/SFProText-Medium.ttf") format("truetype"),
          url("/src/assets/fonts/SFProText/SFProText-Medium.woff2") format("woff2");
     font-style: normal;
     font-weight: 500;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Text";
     src: local('SF Pro Text Medium Italic'),
          url("/src/assets/fonts/SFProText/SFProText-MediumItalic.ttf") format("truetype"),
          url("/src/assets/fonts/SFProText/SFProText-MediumItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 500;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Text";
     src: local('SF Pro Text Regular'),
          url("/src/assets/fonts/SFProText/SFProText-Regular.ttf") format("truetype"),
          url("/src/assets/fonts/SFProText/SFProText-Regular.woff2") format("woff2");
     font-style: normal;
     font-weight: 400;
-}
-
-@font-face {
+  }
+  
+  @font-face {
     font-family: "SF Pro Text";
     src: local('SF Pro Text Regular Italic'),
          url("/src/assets/fonts/SFProText/SFProText-RegularItalic.ttf") format("truetype"),
          url("/src/assets/fonts/SFProText/SFProText-RegularItalic.woff2") format("woff2");
     font-style: italic;
     font-weight: 400;
-}
+  }
+  
