--- a/src/assets/styles/components/footer.css
+++ b/src/assets/styles/components/footer.css
@@ -4,12 +4,11 @@
     margin-top: auto;
     margin-bottom: 48px;
     background: #101828;
-    box-shadow: 0 2px 24px 0 rgba(0, 0, 0, 0.08), 0 0 2px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 2px 24px rgba(0, 0, 0, 0.08), 0 0 2px rgba(0, 0, 0, 0.08);
 }
 
 .footer__content {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 40px;
     align-items: center;
 }
@@ -18,25 +17,25 @@
     font-family: "Inter Bold", sans-serif;
     font-weight: 700;
     font-size: 36px;
+    line-height: 1;
+    color: #fff;
     text-transform: uppercase;
     text-align: center;
     text-decoration: none;
-    line-height: 50%;
-    letter-spacing: 0em;
-    color: #fff;
 }
 
 .footer__contacts {
     display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
     justify-content: space-between;
-    width: 100%;
 }
 
 .footer__contact {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     gap: 8px;
     flex: 1;
+    min-width: 160px;
 }
 
 .footer__contact-title {
@@ -49,8 +48,7 @@
     font-family: "SF Pro Text Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
-    line-height: 18px;
-    letter-spacing: -0.15px;
+    line-height: 1.29;
     color: #98a2b3;
 }
 
@@ -58,9 +56,8 @@
     font-family: "SF Pro Text Semibold", sans-serif;
     font-weight: 600;
     font-size: 17px;
-    line-height: 22px;
-    letter-spacing: -0.41px;
-    color: #FFFFFF;
+    line-height: 1.29;
+    color: #fff;
     text-decoration: none;
 }
 
@@ -75,7 +72,38 @@
     font-family: "SF Pro Text Regular", sans-serif;
     font-weight: 400;
     font-size: 13px;
-    line-height: 16px;
-    letter-spacing: -0.08px;
-    color: #FFFFFF;
+    line-height: 1.23;
+    color: #fff;
+}
+
+@media screen and (max-width: 1023px) {
+    .footer {
+        padding: 46px 32px;
+        margin-bottom: 0;
+        width: 100%;
+        margin-left: -32px;
+    }
+
+    .footer__content {
+        gap: 32px;
+    }
+
+    .footer__contact-content {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .footer {
+        padding: 38px 16px;
+        margin-left: -16px;
+    }
+
+    .footer__content {
+        gap: 52px;
+    }
+
+    .footer__title {
+        font-size: 32px;
+    }
 }
