--- a/src/assets/styles/components/header.css
+++ b/src/assets/styles/components/header.css
@@ -1,61 +1,194 @@
 .header {
-    padding: 16px 24px;
     border-radius: 12px;
+    padding: 16px 24px;
+    width: max-content;
     position: sticky;
     top: 24px;
-    width: fit-content;
     background: #fff;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+    z-index: 1000;
 }
 
 .header__content {
-    gap: 80px;
     display: flex;
+    gap: 80px;
     align-items: center;
 }
 
-.header__title {
+.header__menu {
+    display: none;
+    width: 59px;
+    height: 40px;
+}
+
+.header__menu svg {
+    width: 100%;
+    height: 100%;
+}
+
+.header__title, .header__menu-title {
     font-family: "Inter Bold", sans-serif;
     font-weight: 700;
     font-size: 20px;
-    letter-spacing: -0.15px;
-    line-height: 18px;
     text-transform: uppercase;
+    line-height: 1.2;
+    letter-spacing: -0.15px;
     text-decoration: none;
     color: #2d66ee;
 }
 
 .header__links {
-    gap: 24px;
     display: flex;
+    gap: 24px;
 }
 
 .header__link, .header__contact-content a {
     font-family: "SF Pro Text Medium", sans-serif;
     font-weight: 500;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.29;
     letter-spacing: -0.15px;
     text-decoration: none;
     color: #101828;
 }
 
 .header__contacts {
-    gap: 32px;
     display: flex;
+    gap: 32px;
 }
 
-.header__contact {
-    gap: 8px;
+.header__contact-phone, .header__contact-mail {
     display: flex;
+    gap: 8px;
     align-items: center;
 }
 
-.header__contact-content {
-    gap: 16px;
-    display: flex;
+.header__contact-phone svg, .header__contact-mail svg {
+    width: 24px;
+    height: 24px;
+    color: #2d66ee;
 }
 
-.header__contact-content a {
-    color: #2d66ee;
+.header__menu-content {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #fff;
+    z-index: 9999;
+    display: none;
+    overflow: auto;
+}
+
+.header__menu-wrapper {
+    display: grid;
+    gap: 65px;
+    padding: 100px 40px;
+}
+
+.header__menu-close {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+}
+
+.header__menu-close svg {
+    width: 100%;
+    height: 100%;
+}
+
+.header__menu-title {
+    font-size: 48px;
+    text-align: center;
+    line-height: 1;
+}
+
+.header__menu-links {
+    display: grid;
+    gap: 32px;
+    text-align: center;
+}
+
+.header__menu-link {
+    font-family: "Inter Regular", sans-serif;
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 1.44;
+    letter-spacing: 0.33px;
+    text-decoration: none;
+    color: #101828;
+}
+
+.header__menu-contacts {
+    display: flex;
+    gap: 32px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+@media screen and (max-width: 1328px) {
+    .header__content {
+        gap: 30px;
+    }
+    .header__links {
+        gap: 15px;
+    }
+    .header__contacts {
+        gap: 15px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .header {
+        padding: 25px 32px;
+        width: 100%;
+        margin-left: -32px;
+        top: 16px;
+    }
+    .header__content {
+        justify-content: space-between;
+    }
+    .header__menu {
+        display: block;
+    }
+    .header__title {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .header__links {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .header {
+        padding: 35px 16px;
+        margin-left: -16px;
+        top: 20px;
+    }
+    .header__menu {
+        width: 40px;
+        height: 28px;
+    }
+    .header__menu-wrapper {
+        padding: 70px 40px;
+    }
+    .header__menu-title {
+        font-size: 20px;
+        line-height: 1;
+    }
+    .header__menu-link {
+        font-size: 24px;
+    }
+    .header__menu-links {
+        gap: 21px;
+    }
+    .header__menu-contacts {
+        flex-direction: column;
+        gap: 16px;
+        align-items: center;
+    }
 }
