--- a/src/assets/styles/components/welcome.css
+++ b/src/assets/styles/components/welcome.css
@@ -5,8 +5,9 @@
 
 .block__welcome-content {
     margin-top: 160px;
-    width: 600px;
+    max-width: 600px;
     height: 220px;
+
     display: grid;
     gap: 24px;
 }
@@ -15,93 +16,96 @@
     font-family: "Inter Bold", sans-serif;
     font-weight: 700;
     font-size: 36px;
-    line-height: 144%;
+    line-height: 1.44;
     letter-spacing: 0.33px;
     color: #101828;
 }
 
 .block__welcome-title span {
-    color: #2d66ee;
+    color: #306ff5;
 }
 
 .block__welcome-text {
     font-family: "SF Pro Text Medium", sans-serif;
     font-weight: 500;
     font-size: 15px;
-    line-height: 20px;
+    line-height: 1.33;
     letter-spacing: -0.24px;
     color: #101828;
 }
 
 .block__welcome-form {
     margin-top: 64px;
-    width: fit-content;
+    width: max-content;
     border-radius: 12px;
     padding: 24px;
-    box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.16), 0 0 2px 0 rgba(0, 0, 0, 0.08);
+
     background: #fff;
-    display: grid;
+    box-shadow: 0 0 24px rgba(0, 0, 0, 0.16), 0 0 2px rgba(0, 0, 0, 0.08);
+
+    display: flex;
+    flex-direction: column;
     gap: 32px;
 }
 
 .block__welcome-subtitle {
-    width: 600px;
+    max-width: 600px;
 
     font-family: "Inter Bold", sans-serif;
     font-weight: 700;
     font-size: 20px;
-    line-height: 24px;
+    line-height: 1.2;
     letter-spacing: 0.38px;
     color: #101828;
 }
 
 .form__welcome {
-    width: 628px;
+    max-width: 628px;
     height: 58px;
+
     display: flex;
     gap: 24px;
 }
 
 .form__welcome-content {
+    flex: 1;
     display: grid;
     gap: 8px;
-
-    flex: 1;
 }
 
 .form__welcome-content label {
     font-family: "SF Pro Text Medium", sans-serif;
     font-weight: 500;
     font-size: 13px;
-    line-height: 16px;
+    line-height: 1.23;
     letter-spacing: -0.08px;
     color: #667085;
 }
 
 .form__welcome-content input {
     border: none;
-    border-bottom: solid 0.7px #d0d5dd;
+    border-bottom: 0.7px solid #d0d5dd;
+
     font-family: "SF Pro Text Regular", sans-serif;
     font-weight: 400;
     font-size: 17px;
-    line-height: 22px;
+    line-height: 1.29;
     letter-spacing: -0.41px;
     color: #101828;
 }
 
 .form__welcome button {
     border-radius: 8px;
-    border: 0px;
     padding: 11px 24px;
-    width: 132px;
-    height: 58px;
-    cursor: pointer;
+
     background: #2d66ee;
+    cursor: pointer;
+
     text-align: left;
     font-family: "SF Pro Text Semibold", sans-serif;
     font-weight: 600;
     font-size: 14px;
-    line-height: 18px;
+    line-height: 1.29;
     letter-spacing: -0.15px;
     color: #fff;
 }
@@ -109,6 +113,96 @@
 .block__welcome-image {
     position: absolute;
     top: 0;
-    margin-left: 520px;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: -1;
+
+    width: 100%;
+    max-width: 1440px;
+    height: 900px;
+    overflow: hidden;
+}
+
+.block__welcome-image img {
+    object-fit: cover;
+    transform: translate(62%, -31%);
+}
+
+@media screen and (max-width: 1224px) {
+    .block__welcome-image {
+        width: 100vw;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .block__welcome {
+        margin-top: -90px;
+        height: 762px;
+    }
+
+    .block__welcome-content {
+        margin-top: 138px;
+        max-width: 382px;
+        height: 204px;
+    }
+
+    .block__welcome-title {
+        font-size: 28px;
+    }
+
+    .block__welcome-form {
+        margin-top: 32px;
+        padding: 32px;
+        max-width: 382px;
+        height: 356px;
+    }
+
+    .block__welcome-subtitle {
+        max-width: 295px;
+        font-size: 16px;
+    }
+
+    .form__welcome {
+        max-width: 295px;
+        flex-direction: column;
+        gap: 32px;
+    }
+
+    .form__welcome button {
+        width: fit-content;
+        height: 40px;
+    }
+
+    .block__welcome-image {
+        height: 762px;
+    }
+
+    .block__welcome-image img {
+        scale: 0.6;
+        transform: translate(50%, -46%);
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .block__welcome {
+        height: 1268px;
+    }
+
+    .block__welcome-form {
+        margin-top: 536px;
+        max-width: 392px;
+    }
+
+    .form__welcome {
+        max-width: 224px;
+    }
+
+    .block__welcome-image {
+        height: 1268px;
+    }
+
+    .block__welcome-image img {
+        scale: 0.5;
+        transform: translate(-10%, -16%);
+    }
 }
