--- a/src/assets/styles/components/devcycle.css
+++ b/src/assets/styles/components/devcycle.css
@@ -1,17 +1,19 @@
 .block__devcycle {
     background-color: #ffffff;
 
-    margin: 0 -108px;
+    margin-left: -108px;
+    margin-right: -108px;
     padding: 80px 108px;
 
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 128px;
     width: 100%;
+
+    display: flex;
+    gap: 128px;
 }
 
 .block__devcycle-leftblock {
-    max-width: 600px;
+    width: 600px;
+
     display: grid;
     gap: 34px;
 }
@@ -25,7 +27,7 @@
     font-family: "Inter Bold", sans-serif;
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.44;
+    line-height: 144%;
     letter-spacing: 0.33px;
     color: #101828;
 }
@@ -34,13 +36,14 @@
     font-family: "SF Pro Text Medium", sans-serif;
     font-weight: 500;
     font-size: 15px;
-    line-height: 1.33;
+    line-height: 20px;
     letter-spacing: -0.24px;
     color: #101828;
 }
 
 .block__devcycle-tech {
-    max-width: 496px;
+    width: 496px;
+
     display: grid;
     gap: 16px;
 }
@@ -49,7 +52,7 @@
     font-family: "SF Pro Display Semibold", sans-serif;
     font-weight: 600;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 24px;
     letter-spacing: 0.34px;
     color: #101828;
 }
@@ -58,7 +61,7 @@
     font-family: "SF Pro Text Regular", sans-serif;
     font-weight: 400;
     font-size: 17px;
-    line-height: 1.29;
+    line-height: 22px;
     letter-spacing: -0.41px;
     color: #344054;
 }
@@ -72,19 +75,20 @@
 }
 
 .block__devcycle-item {
+    padding: 12px 0;
+
     display: flex;
-    align-items: center;
     gap: 12px;
 
-    padding: 12px 0;
-    width: max-content;
+    align-items: center;
+    width: fit-content;
 }
 
-.block__devcycle-item a {
+.block__devcycle-item a{
     font-family: "SF Pro Display Regular", sans-serif;
     font-weight: 400;
     font-size: 20px;
-    line-height: 1.2;
+    line-height: 24px;
     letter-spacing: 0.38px;
     color: #1d2939;
 
@@ -92,36 +96,43 @@
     cursor: pointer;
 }
 
-.block__devcycle-item a:hover {
+.block__devcycle-item a:hover{
+    font-family: "SF Pro Display Semibold", sans-serif;
     font-weight: 600;
     color: #101828;
-    border-bottom: 1px solid #2d66ee;
+
+    border-bottom: solid 1px #2d66ee;
 }
 
 @media screen and (max-width: 1224px) {
     .block__devcycle {
-        margin: 0 -80px;
+        margin-left: -80px;
+        margin-right: -80px;
+    
         padding: 80px;
     }
 }
 
 @media screen and (max-width: 1023px) {
     .block__devcycle {
-        margin: 0 -32px;
+        margin-left: -32px;
+        margin-right: -32px;
+    
         padding: 32px;
+    
         gap: 82px;
     }
 
     .block__devcycle-leftblock {
         margin-left: 40px;
-        max-width: 320px;
+        width: 320px;
+
         gap: 32px;
     }
 
-    .block__devcycle-content, 
-    .block__devcycle-tech {
-        max-width: 320px;
-    }
+    .block__devcycle-content, .block__devcycle-tech {
+        width: 320px;
+    } 
 
     .block__devcycle-title {
         font-size: 28px;
@@ -134,19 +145,22 @@
 
 @media screen and (max-width: 767px) {
     .block__devcycle {
-        margin: 0 -16px;
+        margin-left: -16px;
+        margin-right: -16px;
+    
         padding: 32px 16px;
+        
         flex-direction: column;
         gap: 32px;
     }
 
     .block__devcycle-leftblock {
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: initial;
     }
 
     .block__devcycle-enum {
         font-size: 14px;
-        max-width: 278px;
+
+        width: 278px;
     }
 }
