--- a/src/assets/styles/components/dev.css
+++ b/src/assets/styles/components/dev.css
@@ -1,150 +1,131 @@
 .block__dev {
-    background-color: #ffffff;
-    margin-left: -108px;
-    margin-right: -108px;
-    padding: 80px 108px;
-    width: 100%;
-    display: flex;
-    gap: 128px;
+  background-color: #ffffff;
+  margin-left: -108px;
+  margin-right: -108px;
+  padding: 80px 108px;
+  width: 100%;
+  display: flex;
+  gap: 128px;
 }
-
 .block__dev-leftblock {
-    width: 600px;
-    display: grid;
-    gap: 34px;
+  width: 600px;
+  display: grid;
+  gap: 34px;
 }
-
 .block__dev-content {
-    display: grid;
-    gap: 32px;
+  display: grid;
+  gap: 32px;
 }
-
 .block__dev-title {
-    font-family: "Inter Bold", sans-serif;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 144%;
-    letter-spacing: 0.33px;
-    color: #101828;
+  font-family: "Inter Bold", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 144%;
+  letter-spacing: 0.33px;
+  color: #101828;
 }
-
 .block__dev-text {
-    font-family: "SF Pro Text Medium", sans-serif;
-    font-weight: 500;
-    font-size: 15px;
-    line-height: 20px;
-    letter-spacing: -0.24px;
-    color: #101828;
+  font-family: "SF Pro Text Medium", sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  letter-spacing: -0.24px;
+  color: #101828;
 }
-
 .block__dev-tech {
-    width: 496px;
-    display: grid;
-    gap: 16px;
+  width: 496px;
+  display: grid;
+  gap: 16px;
 }
-
 .block__dev-subtitle {
-    font-family: "SF Pro Display Semibold", sans-serif;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0.34px;
-    color: #101828;
+  font-family: "SF Pro Display Semibold", sans-serif;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.34px;
+  color: #101828;
 }
-
 .block__dev-enum {
-    font-family: "SF Pro Text Regular", sans-serif;
-    font-weight: 400;
-    font-size: 17px;
-    line-height: 22px;
-    letter-spacing: -0.41px;
-    color: #344054;
+  font-family: "SF Pro Text Regular", sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  line-height: 22px;
+  letter-spacing: -0.41px;
+  color: #344054;
 }
-
 .block__dev-enum span {
-    color: #2d66ee;
+  color: #2d66ee;
 }
-
 .block__dev-list {
-    display: grid;
+  display: grid;
 }
-
 .block__dev-item {
-    padding: 12px 0;
-    display: flex;
-    gap: 12px;
-    align-items: center;
-    width: fit-content;
+  padding: 12px 0;
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  width: -moz-fit-content;
+  width: fit-content;
 }
-
-.block__dev-item a{
-    font-family: "SF Pro Display Regular", sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: 0.38px;
-    color: #1d2939;
-    text-decoration: none;
-    cursor: pointer;
+.block__dev-item a {
+  font-family: "SF Pro Display Regular", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.38px;
+  color: #1d2939;
+  text-decoration: none;
+  cursor: pointer;
 }
-
-.block__dev-item a:hover{
-    font-family: "SF Pro Display Semibold", sans-serif;
-    font-weight: 600;
-    color: #101828;
-    border-bottom: solid 1px #2d66ee;
+.block__dev-item a:hover {
+  font-family: "SF Pro Display Semibold", sans-serif;
+  font-weight: 600;
+  color: #101828;
+  border-bottom: solid 1px #2d66ee;
 }
 
 @media screen and (max-width: 1224px) {
-    .block__dev {
-        margin-left: -80px;
-        margin-right: -80px;
-        padding: 80px;
-    }
+  .block__dev {
+    margin-left: -80px;
+    margin-right: -80px;
+    padding: 80px;
+  }
 }
-
 @media screen and (max-width: 1023px) {
-    .block__dev {
-        margin-left: -32px;
-        margin-right: -32px;
-        padding: 32px;
-        gap: 82px;
-    }
-
-    .block__dev-leftblock {
-        margin-left: 40px;
-        width: 320px;
-        gap: 32px;
-    }
-
-    .block__dev-content, .block__dev-tech {
-        width: 320px;
-    } 
-
-    .block__dev-title {
-        font-size: 28px;
-    }
-
-    .block__dev-enum {
-        font-size: 14px;
-    }
+  .block__dev {
+    margin-left: -32px;
+    margin-right: -32px;
+    padding: 32px;
+    gap: 82px;
+  }
+  .block__dev-leftblock {
+    margin-left: 40px;
+    width: 320px;
+    gap: 32px;
+  }
+  .block__dev-content, .block__dev-tech {
+    width: 320px;
+  }
+  .block__dev-title {
+    font-size: 28px;
+  }
+  .block__dev-enum {
+    font-size: 14px;
+  }
 }
-
 @media screen and (max-width: 767px) {
-    .block__dev {
-        margin-left: -16px;
-        margin-right: -16px;
-        padding: 32px 16px;
-        flex-direction: column;
-        gap: 32px;
-    }
-
-    .block__dev-leftblock {
-        margin-left: initial;
-    }
-
-    .block__dev-enum {
-        font-size: 14px;
-        width: 278px;
-    }
-}
+  .block__dev {
+    margin-left: -16px;
+    margin-right: -16px;
+    padding: 32px 16px;
+    flex-direction: column;
+    gap: 32px;
+  }
+  .block__dev-leftblock {
+    margin-left: initial;
+  }
+  .block__dev-enum {
+    font-size: 14px;
+    width: 278px;
+  }
+}/*# sourceMappingURL=dev.css.map */
