--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -1,3 +1,4 @@
+// Сброс стилей для основных элементов
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -18,19 +19,23 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
+// HTML5 блоки для старых браузеров
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
+// Общие стили для body
 body {
   line-height: 1;
 }
 
+// Убираем стили для списков
 ol, ul {
   list-style: none;
 }
 
+// Убираем кавычки для цитат
 blockquote, q {
   quotes: none;
 }
@@ -41,7 +46,10 @@ q:before, q:after {
   content: none;
 }
 
+// Сброс для таблиц
 table {
   border-collapse: collapse;
   border-spacing: 0;
-}/*# sourceMappingURL=reset.css.map */
+}
+
+// Источник карты стилей (если нужно)
