--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,5 @@
-@import "reset.scss"; // Обновлено для импорта SCSS-версии
-@import "components/index.scss"; // Обновлено для импорта SCSS-версии
+@import "reset.scss";
+@import "components/index.scss"; 
 
 html {
   font-family: 'SF Pro Text', sans-serif;
